# TAP2SHACL

./: MANIFEST.in  README.MD  README.md  README0.MD  X_pytest.ini  conftest.py  dctap.yml  dev_requirements.txt  parseArguments.py  pyproject.toml  requirements.txt  setup.py  tap2shacl.py
examples/SHACLPerson/: about.csv  dctap.yml  namespaces.csv  readme.md  shacl.ttl  shapes.csv  tap.csv
examples/SHACLPerson/SampleData/: invalid-Alice-ssn.ttl  invalid-Bob-repeatSSN.ttl  invalid-Calvin-extra-data-employer-mistyped.ttl  valid.ttl
examples/SimpleBook/: about.csv  dctap.yml  namespaces.csv  shacl.ttl  shapes.csv  tap.csv
examples/SimpleBook/SampleData/: warning_author_publications.ttl
examples/bookAP/: shacl.ttl  tap.csv
src/: tap2shacl.py
src/ap/: __init__.py  ap.py  shapeInfo.py  statementTemplate.py
src/ap2shacl/: __init__.py  ap2shaclConverter.py
src/dctap/: config.py
src/tap2ap/: __init__.py  tap2apConverter.py
src/tap2shacl/: __init__.py  __main__.py  parseArguments.py  tap2shaclConverter.py
tap2shacl/: __init__.py  __main__.py  tap2shaclConverter.py
tests/: test_tap2shaclConverter.py
tests/TestData/: booksSHACL.ttl  booksTAP-shapes.csv  outputData.ttl
tests/ap/: test_AP.py  test_propertyStatement.py  test_shapeInfo.py
tests/ap/TestData/: namespaces.csv  shapes.csv
tests/ap2shacl/: test_ap2shaclConverter.py
tests/ap2shacl/TestData/: namespaces.csv
tests/tap2ap/: test_loadTAP.py  test_tap2apConverter.py
tests/tap2ap/TestData/: about.csv  dctap.yml.old  expectedAPDump.txt  expected_TAPShapesDict  namespaces.csv  shapes.csv  tap.csv
tests/tap2shacl/: test_tap2shaclConverter.py
tests/tap2shacl/TestData/: booksSHACL.ttl  booksTAP-about.csv  booksTAP-namespaces.csv  booksTAP-shapes.csv  booksTAP.csv
